removed all old STAC Challenge Problem scripts and replaced with a generic script to provide user with easy command-line instrumation and execution script